logs/testrepository_build.log
Removing old build directory
Removing old work directory
BUILD START: testrepository-0.0.20-py_0
Fetching package metadata: ......
Missing dependency fixtures, but found recipe directory, so building fixtures first
Removing old build directory
Removing old work directory
BUILD START: fixtures-1.2.0-py27_0
Fetching package metadata: ......
Solving package specifications: .+ pip install fixtures
Collecting fixtures
  Downloading http://localhost/packages/2.7/f/fixtures/fixtures-1.2.0-py2.py3-none-any.whl (59kB)
Collecting testtools>=0.9.22 (from fixtures)
  Downloading http://localhost/packages/2.7/t/testtools/testtools-1.8.0-py2.py3-none-any.whl (160kB)
Collecting pbr>=0.11 (from fixtures)
  Downloading http://localhost/packages/py2.py3/p/pbr/pbr-0.11.0-py2.py3-none-any.whl (78kB)
Collecting traceback2 (from testtools>=0.9.22->fixtures)
  Downloading http://localhost/packages/3.4/t/traceback2/traceback2-1.4.0-py2.py3-none-any.whl
Collecting extras (from testtools>=0.9.22->fixtures)
  Downloading http://localhost/packages/source/e/extras/extras-0.0.3.tar.gz
Collecting unittest2>=1.0.0 (from testtools>=0.9.22->fixtures)
  Downloading http://localhost/packages/3.4/u/unittest2/unittest2-1.0.1-py2.py3-none-any.whl (95kB)
Collecting python-mimeparse (from testtools>=0.9.22->fixtures)
  Downloading http://localhost/packages/source/p/python-mimeparse/python-mimeparse-0.1.4.tar.gz
Requirement already satisfied (use --upgrade to upgrade): pip in /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages (from pbr>=0.11->fixtures)
Collecting linecache2 (from traceback2->testtools>=0.9.22->fixtures)
  Downloading http://localhost/packages/3.5/l/linecache2/linecache2-1.0.0-py2.py3-none-any.whl
Collecting argparse (from unittest2>=1.0.0->testtools>=0.9.22->fixtures)
  Downloading http://localhost/packages/2.7/a/argparse/argparse-1.3.0-py2.py3-none-any.whl
Collecting six>=1.4 (from unittest2>=1.0.0->testtools>=0.9.22->fixtures)
  Downloading http://localhost/packages/3.3/s/six/six-1.9.0-py2.py3-none-any.whl
Installing collected packages: linecache2, traceback2, extras, argparse, six, unittest2, pbr, python-mimeparse, testtools, fixtures
  Running setup.py install for extras
  Running setup.py install for python-mimeparse
Successfully installed argparse-1.3.0 extras-0.0.3 fixtures-1.2.0 linecache2-1.0.0 pbr-0.11.0 python-mimeparse-0.1.4 six-1.9.0 testtools-1.8.0 traceback2-1.4.0 unittest2-1.0.1
Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests/inspect_fodder2.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests/inspect_fodder2.py", line 102
    def keyworded(*arg1, arg2=1):
                            ^
SyntaxError: invalid syntax


The following NEW packages will be INSTALLED:

    openssl:    1.0.1k-1    
    pip:        7.0.3-py27_0
    python:     2.7.10-0    
    readline:   6.2-2       
    setuptools: 17.0-py27_0 
    sqlite:     3.8.4.1-1   
    system:     5.8-2       
    tk:         8.5.18-0    
    zlib:       1.2.8-0     

Linking packages ...
[                    ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  11%[sqlite              ]|###########                                       |  22%[system              ]|################                                  |  33%[tk                  ]|######################                            |  44%[zlib                ]|###########################                       |  55%[python              ]|#################################                 |  66%[setuptools          ]|######################################            |  77%[pip                 ]|############################################      |  88%[      COMPLETE      ]|##################################################| 100%
Removing old work directory
Source cache directory is: /home/ubuntu/miniconda/conda-bld/src_cache
Found source in cache: fixtures-1.2.0.tar.gz
Extracting download
Package: fixtures-1.2.0-py27_0
source tree in: /home/ubuntu/miniconda/conda-bld/work/fixtures-1.2.0
compiling .pyc files...
Command failed: /home/ubuntu/miniconda/envs/_build/bin/python -Wi /home/ubuntu/miniconda/envs/_build/lib/python2.7/compileall.py -q -x port_v3 /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages
